@@ -1,4 +1,5 @@
-<html metal:use-macro="context/@@standard_macros/view">
+<html metal:use-macro="context/@@standard_macros/view"
+    i18n:domain="zope">
 <head>
   <style metal:fill-slot="headers" type="text/css">
     <!--
@@ -21,7 +22,7 @@
     Message will go here.
   </p>
 
-  <p tal:content="view/description">
+  <p tal:content="view/description" i18n:translate="">
     Description of the Form.
   </p>
 
@@ -35,7 +36,7 @@
                tal:attributes="value context/contentType" />
       </div>
     </div>
-    
+
     <div class="row">
       <div class="label" i18n:translate="">Default Language</div>
       <div class="field">
@@ -83,8 +84,7 @@
     </div>
     <div class="row">
       <div class="label" i18n:translate="">Dimensions</div>
-      <div class="field"
-          tal:content="python:view.size(request.get('language'))">
+      <div class="field" tal:content="view/size" i18n:translate="">
         40 x 40 pixels, 10 kB
       </div>
     </div>
